<resources>
    <string name="app_name">Pinder</string>
    <string name="mainActivity_petMatch">Match Pet</string>
    <string name="mainActivity_listPet">List A Pet</string>
    <string name="mainActivity_adoptPet">Adopt A Pet</string>
    <string name="Breed_Required">Breed is required!</string>
    <string name="Age_Required">Age is required!</string>
    <string name="Name_Required">Name is required!</string>
    <string name="login_signup">Login/Signup</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="resultTitleText">Your Top Three Results:</string>
    <string name="resultBreedName">Golden Retriever</string>
    <string name="resultButtonText">Adopt One</string>
    <string name="mainActivity_result_page">Result Page</string>
    <string name="mainActivity_quiz">Take Breed Quiz</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Name:</string>
    <string name="email">Email</string>
    <string name="location">Location</string>
    <string name="my_matches_btn">My Matches</string>
    <string name="yesButtonTxt">Yes</string>
    <string name="noButtonTxt">NO</string>
    <string name="takeQuizPromptTxt">Would you like to match with your ideal pet?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="placeholder">placeholder</string>
    <string name="placeholder2">placeholder2</string>
    <string name="placeholder3">placeholder3</string>
    <string name="gender">Gender</string>
    <string name="enter_pet_name">enter pet name</string>
    <string name="house_trained">House Trained:</string>
    <string name="breed">Breed</string>
    <string name="enter_breed_type">enter breed type</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="energy_level">Energy Level</string>
    <string name="size">Size</string>
    <string name="enter_url_of_photo">Enter URL of Photo</string>
    <string name="image_url">Image URL:</string>
    <string-array name="energylevels">
        <item name="highenergy">High Energy</item>
        <item name="mediumenergy">Medium Energy</item>
        <item name="lowenergy">Low Energy</item>
    </string-array>
    <string-array name="size">
        <item name="biganimal">Big</item>
        <item name="mediumanimal">Medium</item>
        <item name="lowanimal">Low</item>
    </string-array>
    <string-array name="breeds">
        <item name="dalmation">Dalmation</item>
        <item name="Labrador">Labrador</item>
        <item name="GoldenRetriever">Golden Retriever</item>
        <item name="Spaniel">Spaniel</item>
        <item name="poodle">Poodle</item>
        <item name="pomeranian">Pomeranian</item>
        <item name="huskey">Huskey</item>
        <item name="GermanShepherd">German Shepherd</item>
        <item name="collie">Collie</item>
        <item name="bulldog">Bulldog</item>
        <item name="beagle">Beagle</item>
        <item name="other">Other</item>
    </string-array>
    <string name="title_activity_my_matches">MyMatchesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="it_s_a_match">It\'s a match!</string>
    <string name="matched_with">You matched with </string>
    <string name="dogs_contact_info">\'s Contact Info</string>
    <string name="directions_text1">Dog Characteristics:</string>
    <string name="questionOneTxt">1. Size</string>
    <string name="question1ATxt">Small (1—25 pounds)</string>
    <string name="question1BTxt">Medium (26–70 pounds)</string>
    <string name="question1CTxt">Large (71+ pounds)</string>
    <string name="questionTwoTxt">2. Fur</string>
    <string name="question2ATxt">Coarse fur</string>
    <string name="question2BTxt">Smooth fur</string>
    <string name="question2CTxt">Soft fur</string>
    <string name="questionThreeTxt">3. Energy</string>
    <string name="question3ATxt">Quiet and relaxed</string>
    <string name="question3BTxt">Playful and curious</string>
    <string name="question3CTxt">Active and adventurous</string>
    <string name="questionFourTxt">4. Sociability</string>
    <string name="question4ATxt">Keeps more to themselves</string>
    <string name="question4BTxt">Is friendly and interactive</string>
    <string name="question4CTxt">Loves lots of attention</string>
    <string name="questionFiveTxt">5. Trainability</string>
    <string name="question5ATxt">Can receive basic training</string>
    <string name="question5BTxt">Can be trained to do some tricks</string>
    <string name="question5CTxt">Thrives with lots of training</string>
    <string name="questionSixTxt">6. Shedding</string>
    <string name="question6ATxt">None, hypoallergenic</string>
    <string name="question6BTxt">Some, a little</string>
    <string name="question6CTxt">No preference</string>
    <string name="questionSevenTxt">7. Barking</string>
    <string name="question7ATxt">Rarely barks</string>
    <string name="question7BTxt">Sometimes barks</string>
    <string name="question7CTxt">No preference</string>
    <string name="questionEightTxt">8. What kind of home do you live in?</string>
    <string name="question8ATxt">Mobile or apartment</string>
    <string name="question8BTxt">House with small yard</string>
    <string name="question8CTxt">House with large yard</string>
    <string name="questionNineTxt">9. When will your dog be left at home?</string>
    <string name="directionsText2">Your Living Style:</string>
    <string name="question9ATxt">Never; there is always someone home</string>
    <string name="question9BTxt">Only during the work hours of the day</string>
    <string name="question9CTxt">Fairly often; we’re pretty busy people</string>
    <string name="questionTenTxt">10. Do you have other pets?</string>
    <string name="question10ATxt">Yes, at least one</string>
    <string name="question10BTxt">No other pets</string>
    <string name="doneButtonTxt">Finish</string>
    <string name="questionElevenTxt">11. Do you have young children?</string>
    <string name="question11ATxt">Yes, at least one</string>
    <string name="question11BTxt">No young children</string>
    <string name="subDirectionsTxt">Choose your preference for each question. Scroll down as you go.</string>
    <string name="subDirections2Txt">Choose the appropriate answer for each question. Scroll down as you go.</string>

    <string name="firstImageDescription">First Place Dog Breed</string>
    <string name="firstPercentTxt">25%</string>
    <string name="secondImageDescription">Second Place Dog Breed</string>
    <string name="secondPercentTxt">25%</string>
    <string name="thirdPercentTxt">25%</string>
    <string name="thirdImageDescription">Third Place Dog Image</string>

    <string name="myMatches_noMatches">No matches</string>
    <string name="myMatches_myMAthces">My Matches:</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="toc">1. Creating An Account\n2. Taking the Quiz\n3. Listing A Pet\n4. Adopting A Pet\n5. Updating My Profile</string>
    <string name="HelpCreateAccount">New Pinder users can create an account by inputting their username and password into the login screen. Users are then prompted to update their profile with their personal information.
        \n\n<b>1. Inputting a username and password</b>
        \nOpen Pinder and fill out your unique username and password. Once your password and username have been approved, you may select the button \'Create an Account.\'
        \n\n2. Editing Your Profile
        \nAfter you have made an account, Pinder will direct you to the \'My Profile\' page, where you will input your name, email, and location. Afterwards, select the button “save changes.” Your profile will now be updated to your unique information.
        \n\n3. Uploading Your Profile Photo
        \nOnce you have added your information, you can update your profile picture by clicking the plus sign by the profile picture section.</string>
    <string name="HelpQuiz">Pinder users can take a quiz to find out which dog breed works best with your lifestyle.
        \n\n1. Entering The Quiz
        \nOn the main page, click the Quiz button. Once you hit \'Take Quiz,\' you will need to confirm whether or not you want to take the quiz. If you choose \'no,\' the app will take you back to the main menu. If you choose \'yes,\' the app will take you to the quiz.
        \n\n2. Taking the Quiz
        \nYou will be asked ten questions to match you with your dog breed based on compatibility, preferences, and lifestyle. Scroll through the questions and choose an answer for each question. Click finish.
        \n\n3. Viewing Your Results
        \nYour results will appear and override any results from a previous quiz.</string>
    <string name="HelpListAPet">Pinder allows shelters, businesses, and local dog owners to put dogs up for adoption.
        \n\n1. Uploading Your Pet
        \nLogin to your account and select “List A Pet.” Enter your pet details (name, gender, breed) into the form, including a URL link to a photo. Once finished, select “List A Pet.” Your pet will now be in the Pinder database, for someone to contact you.</string>
    <string name="helpAdoptAPet">You can use Pinder to browse for local dogs and find the pet that’s right for you.
        \n\n1. Navigating to the Adopt A Pet Screen
        \nFrom the home screen, select “Adopt A Pet.”
        \n\n2. Selecting Your Match
        \nPinder is modeled after the popular dating app interface, Tinder. After looking at the pet, you can either click the “X” or the heart. If you click the heart option, the dog will be added to your matches. If you click the X, the app will send you to the next pet profile.
        \n\n3. Contacting The Seller
        \nAfter you have clicked on a heart, your dog will enter your “my matches” page, located in your profile. Click on the profile of the dog you’re interested in, and a match page will pop up, with the contact seller information. If you select the “contact seller” button, your phone will open up your email app to send an email to the seller.</string>
    <string name="HelpUpdateProfile">Update your Pinder profile following these simple steps.
        \n\n1. Navigating to the My Profile Screen
        \nClick on the \'My Profile\' Button located on the bottom right corner of the main screen.
        \n\n2. Updating My Profile
        \nInformation Click on the input field to the right of \'Name\' and add or change the text to match your full name. Click on the input field to the right of \'Email\' and add or change the text to match your current email. Click on the input field to the right of \'Location\' and add or change the text to match your current city.
        \n\n3. Updating Photo
        \nOnce you click on person, Pinder will ask for permission to access your camera. Once you click okay, you will be asked to take a picture of yourself. After you take the picture, that photo will be your new profile picture.
        \n\n4. Saving Your Changes
        \nOnce you have added or updated these input fields, click on the \'Save Changes\' button on the bottom right. This will save your information and bring you to the home page.</string>

</resources>
