<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/whiteneddog">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/startQuizBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mainActivity_quiz"
            android:onClick="onStartQuizBtnPressed"/>

        <Button
            android:id="@+id/petMatchBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="onPetMatchBtnPressed"
            android:text="@string/mainActivity_result_page" />

        <Button
            android:id="@+id/adoptPetBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="onAdoptPetPressed"
            android:text="@string/mainActivity_adoptPet" />

        <Button
            android:id="@+id/tempLoginBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="onTempLoginBtnPressed"
            android:text="Temp Login Button" />

        <Button
            android:id="@+id/listPetBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="onListPethBtnPressed"
            android:text="@string/mainActivity_listPet" />

        <Button
            android:id="@+id/tempMatchBtn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:onClick="onMatchBtnPressed"
            android:text="Temp Match Button" />


        <Button
            android:id="@+id/tempProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temp Profile Button"
            android:onClick="onProfilePressed"/>

    </LinearLayout>

</RelativeLayout>